res: strings: change to BaikalExtras
Change-Id: I2a2bca6a0d8f564927acc2f9b6ed2ade0723ac68

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -259,7 +259,7 @@
     <!-- Power menu and dialogs opacity -->
     <!-- AE settings -->
 
-    <string name="ae_settings_title">AE customization</string>
+    <string name="ae_settings_title">BE customization</string>
     <string name="ae_settings_summary">Customize the look and behaviour of BaikalOS Extras</string>
 
     <string name="theme_title">Theme</string>
