Allow using 4G icon instead LTE [2/2]
Change-Id: Ibeb9c8ade14f18d53221c02063b67ae77c1c8b02

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,6 +41,9 @@
     <!-- Statusbar net monitor -->
     <string name="network_traffic_state_title">Show net activity in statusbar</string>
     <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
+    <!-- 4G icon -->
+    <string name="show_fourg_icon_title">4G icon</string>
+    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
     <!-- QS Header battery percentage -->
 
     <!-- Battery bar -->
